Fix breadcrumb alignment

--- a/branding/css/susemanager-theme.less
+++ b/branding/css/susemanager-theme.less
@@ -327,7 +327,7 @@ header, nav.navbar-pf {
     line-height: 1.2em;
     font-size: 1.6em;
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: baseline;
     color: @spacewalk-gray-light;
     > i {
       display: none;
